fix: info card text align

--- a/layout/style.css
+++ b/layout/style.css
@@ -221,7 +221,6 @@ ul{
 
 /* Info section */
 .info-section {
-  text-align: center;
   margin: 24px 0 20px 0;
 }
 
